diesel_compile_tests/tests/fail/as_changeset_deprecated_column_name.stderr
warning: #[table_name] attribute form is deprecated
  --> $DIR/as_changeset_deprecated_column_name.rs:12:3
   |
12 | #[table_name(users)]
   |   ^^^^^^^^^^

error: `table_name` is either unexpected or has bad format
  --> $DIR/as_changeset_deprecated_column_name.rs:12:3
   |
12 | #[table_name(users)]
   |   ^^^^^^^^^^

error: warnings
  --> $DIR/as_changeset_deprecated_column_name.rs:21:5
   |
21 |     compile_error!("warnings");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
